# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
gendiff/: __init__.py  decoder.py  diff.py  gen_diff.py  parser.py
gendiff/formats/: formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: gen_diff.py  gendiff.py
gendiff/views/: stylish.py
tests/: test_diff.py  test_formats.py  test_gendiff.py  test_parser.py  test_plain.py  test_stylish.py
tests/fixtures/: easy_str_file1.json  easy_str_file2.json  file1.json  file2.json  json_expected.txt  structured_file1.json  structured_file2.json
tests/fixtures/simple/: res_stylish.txt
